gateway/1.12/modules/ROOT/pages/policies-included-directory.adoc
= Inbound Policies Directory
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images

== Inbound Policies Included in Flex Gateway

[%header%autowidth.spread]
|===
|Policy |Category |Summary
| xref:policies-included-a2a-agent-card.adoc[A2A Agent Card] | A2A | Rewrites the Agent Card URL to match the server instance public URL
| xref:policies-included-a2a-pii-detector.adoc[A2A PII Detector] | A2A | Detects personally identifiable information (PII) in requests sent to the agent
| xref:policies-included-a2a-prompt-decorator.adoc[A2A Prompt Decorator] | A2A | Decorates prompts with context information
| xref:policies-included-a2a-schema-validation.adoc[A2A Schema Validation] | A2A | Validates Agent requests to ensure they conform to the A2A specification
| xref:policies-included-a2a-token-rate-limit.adoc[A2A Token Based Rate Limit] | A2A | Limits API usage based on the number of GPT-4o-mini tokens consumed by the agents
| xref:policies-included-llm-proxy-core.adoc[LLM Proxy Core Policy] | LLM | Establishes core functionality for LLM Proxy, including input format detection and metrics collection
| xref:policies-included-llm-token-rate-limit.adoc[LLM Token Based Rate Limit] | LLM | Limits LLM Proxy usage based on the number of tokens consumed (OpenAI-format APIs)
| xref:policies-included-agent-connection-telemetry.adoc[Agent Connection Telemetry] | A2A and MCP | Tracks the number of requests made to agent or MCP server instances
| xref:policies-included-basic-auth-ldap.adoc[Basic Authentication: LDAP] | Security | Allows access based on the basic authorization mechanism, with user-password defined on LDAP
| xref:policies-included-basic-auth-simple.adoc[Basic Authentication: Simple] | Security | Allows access based on the basic authorization mechanism, with a single user-password
| xref:policies-included-client-id-enforcement.adoc[Client ID Enforcement] | Compliance | Allows access only to authorized client applications
| xref:policies-included-cors.adoc[Cross-Origin Resource Sharing (CORS)] | Compliance | Enables access to resources residing in external domains
| xref:policies-included-dataweave-body-transformation.adoc[DataWeave Body Transformation] | Transformation | Transforms request or response body content with a DataWeave script
| xref:policies-included-dataweave-headers-transformation.adoc[DataWeave Headers Transformation] | Transformation | Transforms request or response headers with a DataWeave script
| xref:policies-included-dataweave-request-filter.adoc[DataWeave Request Filter] | Transformation | Filters requests by using a DataWeave script
| xref:policies-included-external-authorization.adoc[External Authorization] | Security | Authenticates requests with an external gRPC or HTTP authorization service
| xref:policies-included-external-processing.adoc[External Processing] | Transformation | Sends the incoming HTTP requests or outgoing HTTP responses to an external gRPC service for additional processing
| xref:policies-included-header-injection.adoc[Header Injection] | Transformation | Adds headers to a request or a response
| xref:policies-included-header-removal.adoc[Header Removal] | Transformation | Removes headers from a request or a response
| xref:policies-included-health-check.adoc[Health Check] | Quality of Service | Monitors API upstream health at specific intervals
| xref:policies-included-http-caching.adoc[HTTP Caching] | Quality of Service | Caches HTTP responses from an API implementation
| xref:policies-included-injection-protection.adoc[Injection Protection] | Security | Scans request headers, path, query, and body to protect against SQL, XSS, and custom injection attacks in incoming requests
| xref:policies-included-ip-allowlist.adoc[IP Allowlist] | Security | Allows a list or range of specified IP addresses to request access
| xref:policies-included-ip-blocklist.adoc[IP Blocklist] | Security | Blocks a single IP address or a range of IP addresses from accessing an API endpoint
| xref:policies-included-json-threat-protection.adoc[JSON Threat Protection] | Security | Protects against malicious JSON in API requests
| xref:policies-included-jwt-validation.adoc[JWT Validation] | Security | Validates a JWT
| xref:policies-included-mcp-attribute-access-control.adoc[MCP Attribute-Based Access Control] | MCP | Controls access to tools, resources, and prompts based on user information such as Tiers, IP, Headers, or Claims
| xref:policies-included-mcp-global-access.adoc[MCP Global Access] | MCP | Restricts which MCP tools are exposed by defining Allow and Block rules
| xref:policies-included-mcp-pii-detector.adoc[MCP PII Detector] | MCP | Blocks elicitation responses containing personally identifiable information (PII) from reaching MCP servers
| xref:policies-included-mcp-payload-optimization.adoc[MCP Payload Optimization] | MCP | Optimizes MCP tool responses for token consumption by transforming HTML to Markdown and removing unnecessary data
| xref:policies-included-mcp-schema-validation.adoc[MCP Schema Validation] | MCP | Validates MCP requests to ensure they conform to the MCP specification
| xref:policies-included-mcp-support.adoc[MCP Support] | MCP | Adds MCP support to a Flex Gateway MCP server instance. This policy is required for your MCP server instance to function properly.
| xref:policies-included-mcp-tool-mapping.adoc[MCP Tool Mapping] | MCP | Redefines tool names and descriptions to reduce prompt complexity and improve LLM comprehension
| xref:policies-included-message-logging.adoc[Message Logging] | Troubleshooting | Logs custom messages using information from incoming requests, responses from the backend, or information from other policies applied to the same API endpoint
| xref:policies-included-oauth-token-introspection.adoc[OAuth 2.0 Token Introspection] | Security | Allows access only to authorized client applications
| xref:policies-included-openid-token-enforcement.adoc[OpenID Connect OAuth 2.0 Access Token Enforcement] | Security | Allows access only to authorized client applications
| xref:policies-included-rate-limiting.adoc[Rate Limiting] | Quality of Service | Monitors access to an API by defining the maximum number of requests processed within a period of time
| xref:policies-included-rate-limiting-sla.adoc[Rate Limiting: SLA-based] | Quality of Service | Monitors access to an API by defining the maximum number of requests processed within a timespan, based on SLAs
| xref:policies-included-regex-prompt-guard.adoc[Regex Prompt Guard] | LLM | Blocks LLM requests that match deny-list regex patterns
| xref:policies-included-response-timeout.adoc[Response Idle Timeout] | Quality of Service | Set a maximum duration Flex Gateway waits for a response from an upstream service
| xref:policies-included-schema-validation.adoc[Schema Validation] | Security | Validates incoming traffic against a supplied OAS3 schema
| xref:policies-included-soap-schema-validation.adoc[SOAP Schema Validation] | Security | Validates incoming traffic against a specified WSDL schema
| xref:policies-included-spike-control.adoc[Spike Control] | Quality of Service | Regulates API traffic
| xref:policies-included-sse-logging.adoc[SSE Logging] | SSE | Logs every SSE event while streaming 
| xref:policies-included-stream-idle-timeout.adoc[Stream Idle Timeout] | Quality of Service | Set a maximum duration a stream can remain idle without receiving a request or response
| xref:policies-included-tracing.adoc[Tracing] | Troubleshooting | Configure OpenTelemetry distributed tracing for an API
| xref:policies-included-traffic-management-route.adoc[Traffic Management for Multiple Upstream Services] | Quality of Service | Manages API instance traffic to multiple upstream services from a single consumer endpoint
| xref:policies-included-traffic-management.adoc[Traffic Management for Multiple Upstream Services (Weighted)] | Quality of Service | Manages API instance traffic to multiple upstream services from a single consumer endpoint, using weighted percentages
| xref:policies-included-tls.adoc[Transport Layer Security (TLS) - Inbound] | Security | Enables authentication between a client and the API proxy
| xref:policies-included-xml-threat-protection.adoc[XML Threat Protection] | Security | Protects against malicious XML in API requests
|===

== See Also

* xref:gateway-home::index.adoc#policy-availability-by-gateway[Policy Availability by Gateway]